--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,26 +23,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^0.14.4
+ cloud_firestore: ^2.5.3
   cupertino_icons: ^1.0.0
-  enum_to_string: ^1.0.14
-  firebase_auth: ^0.18.4+1
-  firebase_core: ^0.5.3
-  firebase_storage: ^5.2.0
-  flutter_launcher_icons: ^0.8.1
-  flutter_rating_bar: ^3.2.0+1
-  flutter_svg: ^0.19.2+1
+  enum_to_string: ^2.0.1
+  firebase_auth: ^3.1.2
+  firebase_core: ^1.7.0
+  firebase_storage: ^10.0.4
+  flutter_launcher_icons: ^0.9.2
+  flutter_rating_bar: ^4.0.0
+  flutter_svg: ^0.22.0
   flutter_tags: ^0.4.9+1
-  future_progress_dialog: ^0.1.1
-  image_picker: ^0.6.7+15
-  intl: ^0.16.1
-  logger: ^0.9.4
-  permission_handler: ^5.0.1+1
-  # pinch_zoom_image_updated: ^0.2.6
-  provider: ^4.3.2+3
-  string_validator: ^0.1.4
+  future_progress_dialog: ^0.2.0
+  image_picker: ^0.8.4+2
+  intl: ^0.17.0
+  logger: ^1.1.0
+  permission_handler: ^8.2.2
+  provider: ^6.0.1
+  pinch_zoom_image_last: 0.4.1
+  string_validator: ^0.3.0
   swipedetector: ^1.2.0
-  url_launcher: ^5.7.10
+  url_launcher: ^6.0.12
+  analyzer: ^2.4.0
 
 dev_dependencies:
   flutter_test:
