--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'androidx.multidex:multidex:2.0.1'
