--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_fonts: ^2.2.0
+  path_provider: ^2.0.8
 
 dev_dependencies:
   flutter_lints: ^1.0.0
