--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.7
+  enum_to_string: ^2.0.1
+  firebase_auth: ^3.3.6
   firebase_core: ^1.12.0
   flutter:
     sdk: flutter
