--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,16 @@ dependencies:
   enum_to_string: ^2.0.1
   firebase_auth: ^3.3.6
   firebase_core: ^1.12.0
+  firebase_storage: ^10.2.6
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^1.0.3
   google_fonts: ^2.2.0
+  logger: ^1.1.0
   path_provider: ^2.0.8
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_lints: ^1.0.0
